Fix alignfull columns

--- a/src/styles/style/_columns.scss
+++ b/src/styles/style/_columns.scss
@@ -41,8 +41,8 @@
 		}
 	}
 
-	&-3.alignfull,
-	&-4.alignfull {
+	&.columns-3.alignfull,
+	&.columns-4.alignfull {
 		// 1280px+
 		@include break-medium() {
 			padding-left: map-get($padding, 4);
@@ -50,7 +50,7 @@
 		}
 	}
 
-	&-4.alignfull {
+	&.columns-4.alignfull {
 		// 1280px+
 		@include break-wide() {
 			padding-left: map-get($padding, 4);
